--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,13 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         XSLoader
-version:      0.06
-version_from: XSLoader_pm.PL
-installdirs:  perl
-requires:
-    Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+--- #YAML:1.0
+name:                XSLoader
+version:             0.07
+abstract:            Dynamically load C libraries into Perl code
+license:             perl
+generated_by:        ExtUtils::MakeMaker version 6.30_04
+author:              ~
+distribution_type:   module
+requires:     
+    Test::More:                    0.62
+meta-spec:
+    url: http://module-build.sourceforge.net/META-spec-new.html
+    version: 1.1
