--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,13 @@
 --- #YAML:1.0
 name:                XSLoader
-version:             0.08
+version:             0.09
 abstract:            Dynamically load C libraries into Perl code
 license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.30_04
 author:              ~
+generated_by:        ExtUtils::MakeMaker version 6.44
 distribution_type:   module
 requires:     
     Test::More:                    0.62
 meta-spec:
-    url: http://module-build.sourceforge.net/META-spec-new.html
-    version: 1.1
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
