--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,22 @@
 --- #YAML:1.0
-name:                XSLoader
-version:             0.10
-abstract:            Dynamically load C libraries into Perl code
-license:             perl
-author:              
+name:               XSLoader
+version:            0.14
+abstract:           Dynamically load C libraries into Perl code
+author:
     - Sebastien Aperghis-Tramoni <sebastien@aperghis.net>
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    Test::More:                    0.62
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Test::More:  0.62
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
