--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,29 @@
---- #YAML:1.0
-name:               XSLoader
-version:            0.15
-abstract:           Dynamically load C libraries into Perl code
+---
+abstract: 'Dynamically load C libraries into Perl code'
 author:
-    - Sebastien Aperghis-Tramoni <sebastien@aperghis.net>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Sebastien Aperghis-Tramoni <sebastien@aperghis.net>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Test::More:  0.62
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: XSLoader
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Test::More: 0.47
+resources:
+  bugtracker: "https://rt.perl.org/rt3/Search/Results.html?Query=Queue='perl5' AND Content LIKE 'module=XSLoader' AND (Status='open' OR Status='new' OR Status='stalled')"
+  homepage: https://metacpan.org/module/Math::BigInt
+  license: http://dev.perl.org/licenses/
+  repository: git://perl5.git.perl.org/perl.git
+  x_Irc: irc://irc.perl.org/#p5p
+  x_Mailinglist: http://lists.perl.org/list/perl5-porters.html
+version: 0.16
